--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pylint = "^2.17.5"
 [tool.taskipy.tasks]
 test = "pytest"
 install_hooks = "pre-commit install"
+watch = 'poetry run ptw --runner "pytest --testmon"'
 
 
 [build-system]
